Bagel/target/generated-sources/antlr4/BagelParser.java
// Generated from Bagel.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BagelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__3=1, T__2=2, T__1=3, T__0=4, DIGIT=5, LETTER=6, SYMBOL=7, ADDITION_OPERATOR=8, 
		SUBTRACTION_OPERATOR=9, MULTIPLICATION_OPERATOR=10, DIVISION_OPERATOR=11, 
		COMPARISON_KEYWORDS=12, ASSIGNMENT_KEYWORD=13, WHITESPACE=14, IF_KEYWORD=15, 
		THEN_KEYWORD=16, ELSE_KEYWORD=17, ELSEIF_KEYWORD=18, PRINT_KEYWORD=19, 
		WHILE_KEYWORD=20, OPEN_BRACE=21, CLOSE_BRACE=22, OPEN_BRACKET=23, CLOSE_BRACKET=24, 
		LOGICAL_KEYWORDS=25, BOOLEAN_KEYWORDS=26, DATATYPE=27;
	public static final String[] tokenNames = {
		"<INVALID>", "' '", "'\n'", "';'", "'.'", "DIGIT", "LETTER", "SYMBOL", 
		"'+'", "'-'", "'*'", "'/'", "COMPARISON_KEYWORDS", "'is'", "WHITESPACE", 
		"'if'", "'then'", "'else'", "'elif'", "'print'", "'while'", "'{'", "'}'", 
		"'('", "')'", "LOGICAL_KEYWORDS", "BOOLEAN_KEYWORDS", "DATATYPE"
	};
	public static final int
		RULE_character = 0, RULE_identifier = 1, RULE_integer_literal = 2, RULE_float_literal = 3, 
		RULE_operator = 4, RULE_declaration_statement = 5, RULE_term = 6, RULE_basic_expression = 7, 
		RULE_relational_expression = 8, RULE_complex_expression = 9, RULE_condition = 10, 
		RULE_return_statement = 11, RULE_while_loop = 12, RULE_if_statement = 13, 
		RULE_else_statement = 14, RULE_ifelse_statement = 15, RULE_construct_statement = 16, 
		RULE_assignment_statement = 17, RULE_other_statement = 18, RULE_statements = 19, 
		RULE_program = 20;
	public static final String[] ruleNames = {
		"character", "identifier", "integer_literal", "float_literal", "operator", 
		"declaration_statement", "term", "basic_expression", "relational_expression", 
		"complex_expression", "condition", "return_statement", "while_loop", "if_statement", 
		"else_statement", "ifelse_statement", "construct_statement", "assignment_statement", 
		"other_statement", "statements", "program"
	};

	@Override
	public String getGrammarFileName() { return "Bagel.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BagelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CharacterContext extends ParserRuleContext {
		public TerminalNode LETTER() { return getToken(BagelParser.LETTER, 0); }
		public TerminalNode DIGIT() { return getToken(BagelParser.DIGIT, 0); }
		public TerminalNode SYMBOL() { return getToken(BagelParser.SYMBOL, 0); }
		public CharacterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_character; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterCharacter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitCharacter(this);
		}
	}

	public final CharacterContext character() throws RecognitionException {
		CharacterContext _localctx = new CharacterContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_character);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIGIT) | (1L << LETTER) | (1L << SYMBOL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(BagelParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(BagelParser.LETTER, i);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_identifier);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(44); match(LETTER);
			}
			setState(48);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(45); match(LETTER);
					}
					} 
				}
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Integer_literalContext extends ParserRuleContext {
		public TerminalNode DIGIT(int i) {
			return getToken(BagelParser.DIGIT, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(BagelParser.DIGIT); }
		public Integer_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterInteger_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitInteger_literal(this);
		}
	}

	public final Integer_literalContext integer_literal() throws RecognitionException {
		Integer_literalContext _localctx = new Integer_literalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_integer_literal);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(52);
			_la = _input.LA(1);
			if (_la==ADDITION_OPERATOR || _la==SUBTRACTION_OPERATOR) {
				{
				setState(51);
				_la = _input.LA(1);
				if ( !(_la==ADDITION_OPERATOR || _la==SUBTRACTION_OPERATOR) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
			}

			setState(55); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(54); match(DIGIT);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(57); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Float_literalContext extends ParserRuleContext {
		public TerminalNode DIGIT(int i) {
			return getToken(BagelParser.DIGIT, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(BagelParser.DIGIT); }
		public Float_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_float_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterFloat_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitFloat_literal(this);
		}
	}

	public final Float_literalContext float_literal() throws RecognitionException {
		Float_literalContext _localctx = new Float_literalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_float_literal);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(60);
			_la = _input.LA(1);
			if (_la==ADDITION_OPERATOR || _la==SUBTRACTION_OPERATOR) {
				{
				setState(59);
				_la = _input.LA(1);
				if ( !(_la==ADDITION_OPERATOR || _la==SUBTRACTION_OPERATOR) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
			}

			setState(62); match(DIGIT);
			setState(63); match(T__0);
			setState(65); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(64); match(DIGIT);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(67); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorContext extends ParserRuleContext {
		public TerminalNode DIVISION_OPERATOR() { return getToken(BagelParser.DIVISION_OPERATOR, 0); }
		public TerminalNode SUBTRACTION_OPERATOR() { return getToken(BagelParser.SUBTRACTION_OPERATOR, 0); }
		public TerminalNode ADDITION_OPERATOR() { return getToken(BagelParser.ADDITION_OPERATOR, 0); }
		public TerminalNode MULTIPLICATION_OPERATOR() { return getToken(BagelParser.MULTIPLICATION_OPERATOR, 0); }
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitOperator(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ADDITION_OPERATOR) | (1L << SUBTRACTION_OPERATOR) | (1L << MULTIPLICATION_OPERATOR) | (1L << DIVISION_OPERATOR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_statementContext extends ParserRuleContext {
		public TerminalNode DATATYPE() { return getToken(BagelParser.DATATYPE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Declaration_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterDeclaration_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitDeclaration_statement(this);
		}
	}

	public final Declaration_statementContext declaration_statement() throws RecognitionException {
		Declaration_statementContext _localctx = new Declaration_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaration_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); match(DATATYPE);
			setState(72); match(T__3);
			setState(73); identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public Integer_literalContext integer_literal() {
			return getRuleContext(Integer_literalContext.class,0);
		}
		public Float_literalContext float_literal() {
			return getRuleContext(Float_literalContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_term);
		try {
			setState(78);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75); integer_literal();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(76); float_literal();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(77); identifier();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Basic_expressionContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public Basic_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basic_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterBasic_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitBasic_expression(this);
		}
	}

	public final Basic_expressionContext basic_expression() throws RecognitionException {
		Basic_expressionContext _localctx = new Basic_expressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_basic_expression);
		int _la;
		try {
			setState(91);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80); term();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(81); term();
				setState(83);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(82); match(T__3);
					}
				}

				setState(85); operator();
				setState(87);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(86); match(T__3);
					}
				}

				setState(89); term();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Relational_expressionContext extends ParserRuleContext {
		public TerminalNode COMPARISON_KEYWORDS() { return getToken(BagelParser.COMPARISON_KEYWORDS, 0); }
		public Basic_expressionContext basic_expression(int i) {
			return getRuleContext(Basic_expressionContext.class,i);
		}
		public List<Basic_expressionContext> basic_expression() {
			return getRuleContexts(Basic_expressionContext.class);
		}
		public Relational_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relational_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterRelational_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitRelational_expression(this);
		}
	}

	public final Relational_expressionContext relational_expression() throws RecognitionException {
		Relational_expressionContext _localctx = new Relational_expressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_relational_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(93); basic_expression();
			setState(95);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(94); match(T__3);
				}
			}

			setState(97); match(COMPARISON_KEYWORDS);
			setState(99);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(98); match(T__3);
				}
			}

			setState(101); basic_expression();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Complex_expressionContext extends ParserRuleContext {
		public List<Relational_expressionContext> relational_expression() {
			return getRuleContexts(Relational_expressionContext.class);
		}
		public TerminalNode LOGICAL_KEYWORDS() { return getToken(BagelParser.LOGICAL_KEYWORDS, 0); }
		public Relational_expressionContext relational_expression(int i) {
			return getRuleContext(Relational_expressionContext.class,i);
		}
		public Complex_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complex_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterComplex_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitComplex_expression(this);
		}
	}

	public final Complex_expressionContext complex_expression() throws RecognitionException {
		Complex_expressionContext _localctx = new Complex_expressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_complex_expression);
		int _la;
		try {
			setState(114);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103); relational_expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(104); relational_expression();
				setState(106);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(105); match(T__3);
					}
				}

				setState(108); match(LOGICAL_KEYWORDS);
				setState(110);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(109); match(T__3);
					}
				}

				setState(112); relational_expression();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public Complex_expressionContext complex_expression() {
			return getRuleContext(Complex_expressionContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); complex_expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Return_statementContext extends ParserRuleContext {
		public Complex_expressionContext complex_expression() {
			return getRuleContext(Complex_expressionContext.class,0);
		}
		public TerminalNode PRINT_KEYWORD() { return getToken(BagelParser.PRINT_KEYWORD, 0); }
		public Return_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterReturn_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitReturn_statement(this);
		}
	}

	public final Return_statementContext return_statement() throws RecognitionException {
		Return_statementContext _localctx = new Return_statementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_return_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); match(PRINT_KEYWORD);
			setState(120);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(119); match(T__3);
				}
			}

			setState(122); complex_expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_loopContext extends ParserRuleContext {
		public TerminalNode CLOSE_BRACE() { return getToken(BagelParser.CLOSE_BRACE, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(BagelParser.OPEN_BRACE, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode WHILE_KEYWORD() { return getToken(BagelParser.WHILE_KEYWORD, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public While_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterWhile_loop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitWhile_loop(this);
		}
	}

	public final While_loopContext while_loop() throws RecognitionException {
		While_loopContext _localctx = new While_loopContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_while_loop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(124); match(WHILE_KEYWORD);
			setState(126);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(125); match(T__3);
				}
			}

			setState(128); condition();
			setState(130);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(129); match(T__3);
				}
			}

			setState(132); match(OPEN_BRACE);
			setState(134);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(133); match(T__3);
				}
			}

			setState(136); statements();
			setState(138);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(137); match(T__3);
				}
			}

			setState(140); match(CLOSE_BRACE);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_statementContext extends ParserRuleContext {
		public List<TerminalNode> CLOSE_BRACE() { return getTokens(BagelParser.CLOSE_BRACE); }
		public TerminalNode ELSEIF_KEYWORD() { return getToken(BagelParser.ELSEIF_KEYWORD, 0); }
		public List<TerminalNode> OPEN_BRACE() { return getTokens(BagelParser.OPEN_BRACE); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public TerminalNode IF_KEYWORD() { return getToken(BagelParser.IF_KEYWORD, 0); }
		public TerminalNode OPEN_BRACE(int i) {
			return getToken(BagelParser.OPEN_BRACE, i);
		}
		public TerminalNode CLOSE_BRACE(int i) {
			return getToken(BagelParser.CLOSE_BRACE, i);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public If_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).enterIf_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BagelListener ) ((BagelListener)listener).exitIf_statement(this);
		}
	}

	public final If_statementContext if_statement() throws RecognitionException {
		If_statementContext _localctx = new If_statementContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_if_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(IF_KEYWORD);
			setState(144);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(143); match(T__3);
				}
			}

			setState(146); condition();
			setState(148);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(147); match(T__3);
				}
			}

			setState(150); match(OPEN_BRACE);
			setState(152);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(151); match(T__3);
				}
			}

			setState(154); statements();
			setState(156);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(155); match(T__3);
				}
			}

			setState(158); match(CLOSE_BRACE);
			setState(176);
			switch ( getInterpreter().adaptivePredict(_input,27,_ctx) ) {
			case 1:
				{
				setState(160);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(159); match(T__3);
					}
				}

				setState(162); match(ELSEIF_KEYWORD);
				setState(164);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(163); match(T__3);
					}
				}

				setState(166); match(OPEN_BRACE);
				setState(168);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(167); match(T__3);
					}
				}

				setState(170); statements();
				setState(172);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(171); match(T__3);
					}
				}

				setState(174); match(CLOSE_BRACE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
